ADD type uploaded docs (#732)
* ADD type uploaded docs

* Update aktionen.adoc

* UPDATE uploaded docs

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1137,6 +1137,42 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#230[Notiz zum Auftrag]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
+[#uploaded-docs]
+==== Hochgeladene Dokumente
+
+Mit der Aktion *Hochgeladene Dokumente* können alle hochgeladenen Dokumente für einen Auftrag per Subaktion automatisch zum Beispiel gedruckt oder gespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente.
+
+[.subhead]
+Arbeitsschritte
+
+Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
+
+* xref:automatisierung:arbeitsschritte.adoc#auftragsabwicklung[Auftragsabwicklung]
+* xref:automatisierung:arbeitsschritte.adoc#auftragsbearbeitung[Auftragsbearbeitung]
+
+[.subhead]
+Einstellungen
+
+Für diese Aktion sind keine zusätzlichen Einstellungen verfügbar. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settings>>.
+
+[.subhead]
+Aktionen für Fehlerfall
+
+Verfügbare Aktionen für den Fehlerfall:
+
+* xref:automatisierung:aktionen.adoc#170[Auftrag]
+* xref:automatisierung:aktionen.adoc#220[E-Mail]
+
+[.subhead]
+Subaktionen
+
+Verfügbare Subaktionen für diese Aktion:
+
+* xref:automatisierung:subaktionen.adoc#180[Drucken]
+* xref:automatisierung:subaktionen.adoc#280[Speichern]
+* xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#270[Sounds]
+
 [#270]
 ==== Korrekturbeleg
 
