--- a/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
@@ -3,10 +3,7 @@
 :id: ZZ5Q7JY
 :author: team-crm
 
-
-:kennzahl: Kontakte
-
-include::partial$kennzahlen-einleitung.adoc[]
+Diese Seite erläutert die Dimensionen und Filter, die dir für die Kennzahl *Kontakte* zur Verfügung stehen. Diese Seite dient lediglich als Referenz und setzt voraus, dass du bereits Grundkenntnisse über das xref:business-entscheidungen:myview-dashboard.adoc#[plentyBI-Tool] hast.
 
 plentymarkets berechnet die Kennzahl *Kontakte* nach den <<#200, Dimensionen>> *Erstellungsdatum* und *Land*. Wähle zusätzlich <<#300, Filter>>, um zu konkretisieren, nach welchen Kriterien die Kontakte gefiltert werden sollen.
 
