CHANGE a bit of formatting

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -530,7 +530,7 @@
 ** xref:business-entscheidungen:systemadministration.adoc[Systemadministration]
 *** xref:business-entscheidungen:domains.adoc[Domains]
 *** xref:business-entscheidungen:plentymarkets-status.adoc[plentymarkets Status]
-*** xref:business-entscheidungen:versionszyklus.adoc[Entwicklungsstand ändern]
+*** xref:business-entscheidungen:versionszyklus.adoc[Version (Beta, Early, Stable)]
 *** xref:business-entscheidungen:dns-selbsthilfe.adoc[DNS-Einstellungen prüfen und anpassen]
 *** xref:business-entscheidungen:ssl-zertifikat_bestellen.adoc[SSL-Zertifikate]
 *** xref:business-entscheidungen:hosting-daten.adoc[Verbrauchsdaten]
