--- a/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
@@ -51,10 +51,9 @@ include::partial$summe-minuten.adoc[]
 === Erstellt am
 
 :kennzahl: Die Kennzahl Nachrichten
-:filtered-data: der Nachrichten
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Nachrichten erstellt wurden, einbezogen.
 
-include::partial$erstellt-am.adoc[]
+include::partial$erstellungsdatum.adoc[]
 
 === Erstellungsdatum, Benutzer
 
@@ -73,12 +72,14 @@ include::partial$erstellungsdatum-tag.adoc[]
 === Erstellungsdatum, Tag, Benutzer
 
 :kennzahl: die Kennzahl Nachrichten
-:das-bedeutet: So erkennst du auf einen Blick, wann die Nachrichten erstellt wurden. Differenziert wird zusätzlich nach den Tags, die mit der Nachricht verknüpft sind, sowie dem Benutzer, der die Nachricht erstellt hat.
+:das-bedeutet: So erkennst du auf einen Blick, wann die Nachrichten erstellt wurden. Differenziert wird zusätzlich nach den Tags, die mit der Nachricht verknüpft sind, sowie der Benutzer:in, die die Nachricht erstellt hat.
 
 include::partial$erstellungsdatum-tag-benutzer.adoc[]
 
 [#300]
 == Filter
+
+include::partial$filter-einleitung.adoc[]
 
 // Abgeschlossen am
 
@@ -144,7 +145,6 @@ include::partial$entspricht-einem-dieser-werte.adoc[]
 
 --
 
-include::partial$filter-einleitung.adoc[]
 
 // Erstellt am
 
