--- a/docs/de-de/modules/maerkte/pages/woocommerce.adoc
+++ b/docs/de-de/modules/maerkte/pages/woocommerce.adoc
@@ -126,7 +126,36 @@ Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Ar
 2+|*Prozesse*
 
 |*Auftragsimport*
-| Läuft alle 15 Minuten.<br /><br /> Importiert nur Aufträge aus den Status, die Du unter *Auftragsimportstatus* freigeschaltet hast. <br /> <br /> Folgende Daten werden importiert: <br /> * *Auftragstyp* <br /> * *Status* <br /> * *Währung*  <br /> * *Externe Auftrag-Id* <br /> * *Rechnungsadresse* <br /> * *Lieferadresse* <br /> * *Kontakt* <br /> → als Auftragsempfänger verknüpft <br /> * *Artikel* und *Varianten Id's* <br /> * *Auftragsherkunft* <br /> * *Artikel Beschreibung* <br /> * *Bestellte Mengen* <br /> * *MwSt.* <br /> * *MwSt.-Satz* <br /> * *Verkaufspreis* <br /> → ohne Zuschläge und Rabatte <br /> * *Rabatte* <br /> * *Kunden Notizen* <br /> <br /> Das korrekte plentymarkets Versandprofil wird beim Auftragsimport nur dann zugewiesen, wenn die Versandprofilnamen zwischen WooCommerce und plentymarkets übereinstimmen. <br /> <br /> Das Plug-in erkennt nur Rabattartikel, die auf WooCommerce-Aufträgen enthalten sind, Rabatt-Campagnen werden nicht unterstützt. Der rabattierte Wert aus dem WooCommerce-Auftrag wird als separates Line-Item importiert. <br /><br /> Der Auftragsimport  führt auch eine *Paymantstatus-Aktualisierung* für schon importierte Aufträge durch.
+| Läuft alle 15 Minuten.
+
+Importiert nur Aufträge aus den Status, die Du unter *Auftragsimportstatus* freigeschaltet hast.
+
+Folgende Daten werden importiert:
+
+* *Auftragstyp*
+* *Status*
+* *Währung*
+* *Externe Auftrag-Id*
+* *Rechnungsadresse*
+* *Lieferadresse*
+* *Kontakt* +
+→ als Auftragsempfänger verknüpft
+* *Artikel* und *Varianten Id's*
+* *Auftragsherkunft*
+* *Artikel Beschreibung*
+* *Bestellte Mengen*
+* *MwSt.*
+* *MwSt.-Satz*
+* *Verkaufspreis* +
+→ ohne Zuschläge und Rabatte
+* *Rabatte*
+* *Kunden Notizen*
+
+Das korrekte plentymarkets Versandprofil wird beim Auftragsimport nur dann zugewiesen, wenn die Versandprofilnamen zwischen WooCommerce und plentymarkets übereinstimmen.
+
+Das Plugin erkennt nur Rabattartikel, die auf WooCommerce-Aufträgen enthalten sind, Rabatt-Campagnen werden nicht unterstützt. Der rabattierte Wert aus dem WooCommerce-Auftrag wird als separates Line-Item importiert.
+
+Der Auftragsimport führt auch eine *Paymantstatus-Aktualisierung* für schon importierte Aufträge durch.
 
 |*Warenbestand-Export*
 | Wird dynamisch ausgeführt, basierend auf der Anzahl der zu aktualisierenden Varianten
@@ -147,10 +176,16 @@ Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Ar
 
 Importiert den WooCommerce-Kundenstamm nach plentymarkets.
 
-*_Hinweis:_* Während des Auftragsimports speichert das Plugin auftragsrelevante Kontaktdaten. Weitere Informationen hierzu findest Du unter <<*Überlegungen zur DSGVO* am Ende der Pluginbeschreibung.
+*_Hinweis:_* Während des Auftragsimports speichert das Plugin auftragsrelevante Kontaktdaten. Weitere Informationen hierzu findest Du unter <<dsgvo, Überlegungen zur DSGVO>> am Ende der Pluginbeschreibung.
 
 |*Kategorieexport*
-| Läuft einmal am Tag. Exportiert alle Kategorien die Du für die Auftragsherkunft WooCommerce freigeschaltet hast. <br /> <br /> *HINWEIS:* Verwenden diese Funktion nicht, um Artikel-verknüpfte Kategorien zu exportieren. Verwende zu diesem Zweck stattdessen den Artikelexport. Diese Funktion ist für einen einfachen Export deines gesamten plentymarkets Kategoriebaums gedacht.<br /><br /> Bitte beachte, dass das Plugin bestimmte WooCommerce-Kategorien löschen kann, wenn: <br /> * Die verknüpte plentymarkets-Kategorie gelöscht wird.<br /> * Oder die Mandantenzuweisung der verknüpften plentymarkets-Kategorie entfernt wurde.
+| Läuft einmal am Tag. Exportiert alle Kategorien die Du für die Auftragsherkunft WooCommerce freigeschaltet hast. +
+*_Hinweis:_* Verwenden diese Funktion nicht, um Artikel-verknüpfte Kategorien zu exportieren. Verwende zu diesem Zweck stattdessen den Artikelexport. Diese Funktion ist für einen einfachen Export deines gesamten plentymarkets Kategoriebaums gedacht.
+
+Bitte beachte, dass das Plugin bestimmte WooCommerce-Kategorien löschen kann, wenn:
+
+* Die verknüpte plentymarkets-Kategorie gelöscht wird.
+* Oder die Mandantenzuweisung der verknüpften plentymarkets-Kategorie entfernt wurde.
 
 |*Kategorieimport*
 |Läuft ein Mal am Tag. Importiert alle Kategorien aus WooCommerce.
@@ -158,10 +193,53 @@ Importiert den WooCommerce-Kundenstamm nach plentymarkets.
 *_Hinweis:_* Artikel verknüpfte Kategorien können auch beim *Artikelimport*, importiert werden.
 
 |*Artikelexport*
-| * Läuft ein Mal am Tag für den ersten Import. <br /> * Stündlich für nachfolgende Artikelaktualisierungen. <br /> <br /> *_Wichtig:_* Das Plugin verarbeitet nur WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*. <br > <br /> Folgende Daten werden exportiert: <br /> * *Name 1* als *Produktname* <br /> * *Vorschautext* als *Produkt Kurzbeschreibung* <br /> * *Artikeltext* als *Produkt Beschreibung* <br /> * *Erstelldatum* als *Veröffentlicht am:*  <br /> * *Verkaufspreis* als *Regulärer Preis* <br /> → Verkaufspreis mit der kleinsten Postion im Artikel, der für WooCommerce freigeschaltet ist. <br /> * *Aktionspreis* als *Angebotspreis* <br />* Artikel verlinkte *Kategorien*  <br /> → Die für WooCommerce freigeschaltet sind. <br /> * *Gewicht Brutto* als *Gewicht* <br /> * *Maße* als *Maße* <br /> * *MwSt.-Satz* <br /> * *Artikelbilder* auf die *Produktgalerie* <br /> * Das verlinkte *Varianten-Bild* mit der kleinsten Position.<br /> * *Verlinkte Attribute* als *Attribute*  <br /> * *Merkmale* als *Attribute * Sichtbar auf der Produktseite* <br /> * *Eigenschaften* als *Attribute * Sichtbar auf der Produktseite* <br /> * *Meta-Keywords* als *Tags* <br /> * *SKU* als *SKU*  <br /> * *WB NETTO* als *Lagerbestandsmenge*|
+| * Läuft ein Mal am Tag für den ersten Import.
+* Stündlich für nachfolgende Artikelaktualisierungen. +
+*_Wichtig:_* Das Plugin verarbeitet nur WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
+
+Folgende Daten werden exportiert:
+
+* *Name 1* als *Produktname*
+* *Vorschautext* als *Produkt Kurzbeschreibung*
+* *Artikeltext* als *Produkt Beschreibung*
+* *Erstelldatum* als *Veröffentlicht am:*
+* *Verkaufspreis* als *Regulärer Preis* +
+→ Verkaufspreis mit der kleinsten Postion im Artikel, der für WooCommerce freigeschaltet ist.
+* *Aktionspreis* als *Angebotspreis*
+* Artikel verlinkte *Kategorien* +
+→ Die für WooCommerce freigeschaltet sind.
+* *Gewicht Brutto* als *Gewicht*
+* *Maße* als *Maße*
+* *MwSt.-Satz*
+* *Artikelbilder* auf die *Produktgalerie*
+* Das verlinkte *Varianten-Bild* mit der kleinsten Position.
+* *Verlinkte Attribute* als *Attribute*
+* *Merkmale* als *Attribute * Sichtbar auf der Produktseite*
+* *Eigenschaften* als *Attribute * Sichtbar auf der Produktseite*
+* *Meta-Keywords* als *Tags*
+* *SKU* als *SKU*
+* *WB NETTO* als *Lagerbestandsmenge*
 
 |*Artikelimport*
-| Läuft ein Mal am Tag <br /> <br /> Das Plugin verarbeitet nur WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*. <br > <br /> Folgende Daten werden importiert: <br /> * *Produktname* als *Name 1* <br /> * *Produkt Kurzbeschreibung* als *Vorschautext* <br /> * Verknüpfte *Kategorien* als *Artikel verlinkte Kategorien* <br /> * *Regulärer Preis* als *Verkaufspreis* <br /> → Ein Verkaufspreis für die Auftragsherkunft WooCommerce wird erstellt, falls keiner existiert.<br /> * *Angebotspreis* als *Aktionspreis* <br /> * *Gewicht* als *Gewicht Brutto* *Maße* als *Maße* <br /> * *Produkt Bilder*  <br /> * *Varianten verknüpftes Bild* als *Varianten verknüpftes Bild* <br /> * *Attribute * Sichtbar auf der Produktseite* als * Eigenschaften* <br /> * *Tags* als *Meta-Keywords* <br /> * *Lagerbestandsmenge* als *Physischer Warenbestand* <br /> * *SKU* as *SKU*|
+| Läuft ein Mal am Tag
+
+Das Plugin verarbeitet nur WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
+
+Folgende Daten werden importiert:
+
+* *Produktname* als *Name 1*
+* *Produkt Kurzbeschreibung* als *Vorschautext*
+* Verknüpfte *Kategorien* als *Artikel verlinkte Kategorien*
+* *Regulärer Preis* als *Verkaufspreis* +
+→ Ein Verkaufspreis für die Auftragsherkunft WooCommerce wird erstellt, falls keiner existiert.
+* *Angebotspreis* als *Aktionspreis*
+* *Gewicht* als *Gewicht Brutto* *Maße* als *Maße*
+* *Produkt Bilder*
+* *Varianten verknüpftes Bild* als *Varianten verknüpftes Bild*
+* *Attribute * Sichtbar auf der Produktseite* als *Eigenschaften*
+* *Tags* als *Meta-Keywords*
+* *Lagerbestandsmenge* als *Physischer Warenbestand*
+* *SKU* as *SKU*
 
 2+| *Datenaustausch*
 | *Hersteller als Attribut exportieren*
@@ -174,19 +252,40 @@ Importiert den WooCommerce-Kundenstamm nach plentymarkets.
 | *Aktiviere / Deaktiviere* den Export neuer Artikel als *Entwürfe*.
 
 |*Automatische SKU-Erstellung basiert auf:*
-|Generiert SKUs für exportierte Varianten basierend auf Benutzerauswahl.<br /> <br /> Auswahlmöglichkeiten sind: <br /> * *Leer* → erstellt keine SKU.  <br /> * *Variantennr.* <br /> * *Varianten Id* <br /> -*Barcode* <br /> <br /> *_Wichtig:_* Wir empfehlen, dass Du für alle WooCommerce-Webshops, die über das Plugin verwaltet werden, dasselbe Eingabefeld zur SKU-Generierung benutzt.
+|Generiert SKUs für exportierte Varianten basierend auf Benutzerauswahl.
+
+Auswahlmöglichkeiten sind:
+
+* *Leer* → erstellt keine SKU.
+* *Variantennr.*
+* *Varianten Id*
+-*Barcode*
+
+*_Empfehlung:_* Verwende dasselbe Eingabefeld zur SKU-Generierung für alle WooCommerce-Webshops, die über das Plugin verwaltet werden.
 
 |*Artikel-Sprache für Export / Import*
-| Wähle eine Sprache für den Artikel Import / Export aus. <br /> <br /> *_Wichtig:_* Bitte beachte, dass alle übersetzbaren Eingabefelder eingerichtet sein müssen, damit der Export korrekt laufen kann.
+| Wähle eine Sprache für den Artikel Import / Export aus.
+
+*_Wichtig:_* Bitte beachte, dass alle übersetzbaren Eingabefelder eingerichtet sein müssen, damit der Export korrekt laufen kann.
 
 |*WooCommerce-Artikel deaktivieren, wenn der verknüpfte plentymarkets-Artikel deaktiviert ist*
 | *Aktiviere / Deaktiviere* das Löschen von WooCommerce-Artikeln, die auf plentymarkets deaktiviert wurden.
 
 |*Exportiere Eigenschaften als WooCommerce Attribute*
-| Entscheide welche verknüpften Eigenschaften beim Artikelexport beachtet werden sollen. <br /><br /> Verfügbare Optionen sind: <br /> * *Keine* <br /> * *Alle* <br /> * *Nur ausgewählte Eigenschaften* <br /> → Benutze den Reiter *Eigenschaften Export* um auszuwählen welche Eigenschaften für den Export freigeschaltet werden.
+| Entscheide welche verknüpften Eigenschaften beim Artikelexport beachtet werden sollen.
+
+Verfügbare Optionen sind:
+
+* *Keine*
+* *Alle*
+* *Nur ausgewählte Eigenschaften* +
+→ Benutze den Reiter *Eigenschaften Export* um auszuwählen welche Eigenschaften für den Export freigeschaltet werden.
 
 |*Tags für Export / Import*
-| Tags aus folgender Quelle exportieren:<br />-Meta Keywords <br />* Varianten zugewiesene Tags
+| Tags aus folgender Quelle exportieren:
+
+* Meta Keywords
+* Varianten zugewiesene Tags
 
 |*Bestandspuffer*
 | Beim Senden von Beständen an WooCommerce subtrahiert das Plugin immer die Menge, die hier eingetragen wird.
@@ -205,7 +304,14 @@ Importiert den WooCommerce-Kundenstamm nach plentymarkets.
 |Das Auftragsimportdatum wird bei jedem Auftragsimportlauf aktualisiert, um das Datum des letzten imports wiederzugeben. Um ältere Aufträge zu importieren, trage, als Startdatum, des ältesten verpassten Auftrags ein.
 
 |*Auftragsimportstatus*
-| Wähle aus, welche Aufträge nach plentymarkets importiert werden sollen. <br /> <br /> Auswahlmöglichkeiten sind: <br /> * *Zahlung ausstehend* <br /> * *In Bearbeitung* <br /> * *In Wartestellung* <br /> * *Fertiggestellt*
+| Wähle, welche Aufträge nach plentymarkets importiert werden sollen.
+
+Auswahlmöglichkeiten sind:
+
+* *Zahlung ausstehend*
+* *In Bearbeitung*
+* *In Wartestellung*
+* *Fertiggestellt*
 
 |*Identifiziere die Hausnummer aus dem WooCommerce-Eingabefeld 'Adresszeile 1'*
 |*Aktiviere / Deaktiviere* die Extraktion der *Hausnummer* aus WooCommerce *Adresszeile 1*. Dieser Wert wird auf das plentymarkets Eingabefeld *ADDRESSE 2* importiert.
@@ -386,6 +492,7 @@ Mit den Ereignisaktionen des Plugins kannst Du mit WooCommerce Informationen üb
 
 |===
 
+[#dsgvo]
 === Überlegungen zur DSGVO
 
 Aufgrund der DSGVO-Spezifikationen wurden folgende Richtlinien in Bezug auf Kunden beim Auftragsimport implementiert:
