--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -52,7 +52,7 @@ include::partial$artikelkategorie-erstellungsdatum.adoc[]
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, durchschnittlich verkauft werden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include:partial$order-referrer-plugin-creation-date.adoc[]
+include::partial$order-referrer-plugin-creation-date.adoc[]
 
 === Auftragsherkunft, Erstellungsdatum
 
@@ -80,14 +80,14 @@ include::partial$auftragsherkunft-zahlungsdatum.adoc[]
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum des Abonnements einbezogen.
 
-include:partial$subscription-end-date.adoc[]
+include::partial$subscription-end-date.adoc[]
 
 === Enddatum Abo Artikel
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
-include:partial$subscription-item-end-date.adoc[]
+include::partial$subscription-item-end-date.adoc[]
 
 === Erstellungsdatum
 
@@ -108,7 +108,7 @@ include::partial$hersteller-erstellungsdatum.adoc[]
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: So erkennst du auf einem Blick, wie viele Aufträge aufgeschlüsselt nach Kontakt generiert wurden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include:partial$contact-creation-date.adoc[]
+include::partial$contact-creation-date.adoc[]
 
 === Lager, Erstellungsdatum
 
@@ -178,14 +178,14 @@ include::partial$retourengrund-erstellungsdatum.adoc[]
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum des Abonnements einbezogen.
 
-include:partial$subscription-start-date.adoc[]
+include::partial$subscription-start-date.adoc[]
 
 === Startdatum Abo Artikel
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
-include:partial$subscription-item-start-date.adoc[]
+include::partial$subscription-item-start-date.adoc[]
 
 === Warenausgangsdatum
 
