--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
@@ -54,7 +54,7 @@ include::partial$artikelkategorie-erstellungsdatum.adoc[]
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: So erkennst du auf einen Blick, welcher durschnittliche Bestellwert aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, generiert wird. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include:partial$order-referrer-plugin-creation-date.adoc[]
+include::partial$order-referrer-plugin-creation-date.adoc[]
 
 === Auftragsherkunft, Erstellungsdatum
 
@@ -82,14 +82,14 @@ include::partial$auftragsherkunft-zahlungsdatum.adoc[]
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum des Abonnements einbezogen.
 
-include:partial$subscription-end-date.adoc[]
+include::partial$subscription-end-date.adoc[]
 
 === Enddatum Abo Artikel
 
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
-include:partial$subscription-item-end-date.adoc[]
+include::partial$subscription-item-end-date.adoc[]
 
 === Erstellungsdatum
 
@@ -110,7 +110,7 @@ include::partial$hersteller-erstellungsdatum.adoc[]
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: So erkennst du auf einem Blick, welchen durchschnittlichen Bestellwert welcher Kontakt generiert. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include:partial$contact-creation-date.adoc[]
+include::partial$contact-creation-date.adoc[]
 
 === Lager, Erstellungsdatum
 
@@ -180,14 +180,14 @@ include::partial$retourengrund-erstellungsdatum.adoc[]
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum des Abonnements einbezogen.
 
-include:partial$subscription-start-date.adoc[]
+include::partial$subscription-start-date.adoc[]
 
 === Startdatum Abo Artikel
 
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
-include:partial$subscription-item-start-date.adoc[]
+include::partial$subscription-item-start-date.adoc[]
 
 === Warenausgangsdatum
 
