--- a/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
@@ -72,7 +72,7 @@ include::partial$artikelkategorie-erstellungsdatum.adoc[]
 :kennzahl: Die Retourenquote
 :das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, generiert wird. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include:partial$order-referrer-plugin-creation-date.adoc[]
+include::partial$order-referrer-plugin-creation-date.adoc[]
 
 === Auftragsherkunft, Erstellungsdatum
 
@@ -100,14 +100,14 @@ include::partial$auftragsherkunft-zahlungsdatum.adoc[]
 :kennzahl: Die Retourenquote
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum des Abonnements einbezogen.
 
-include:partial$subscription-end-date.adoc[]
+include::partial$subscription-end-date.adoc[]
 
 === Enddatum Abo Artikel
 
 :kennzahl: Die Retourenquote
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
-include:partial$subscription-item-end-date.adoc[]
+include::partial$subscription-item-end-date.adoc[]
 
 === Erstellungsdatum
 
@@ -128,7 +128,7 @@ include::partial$hersteller-erstellungsdatum.adoc[]
 :kennzahl: Die Retourenquote
 :das-bedeutet: So erkennst du auf einem Blick, wie viel Versandumsatz von welchem Kontakt generiert wird. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include:partial$contact-creation-date.adoc[]
+include::partial$contact-creation-date.adoc[]
 
 === Lager, Erstellungsdatum
 
@@ -198,14 +198,14 @@ include::partial$retourengrund-erstellungsdatum.adoc[]
 :kennzahl: Die Retourenquote
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum des Abonnements einbezogen.
 
-include:partial$subscription-start-date.adoc[]
+include::partial$subscription-start-date.adoc[]
 
 === Startdatum Abo Artikel
 
 :kennzahl: Die Retourenquote
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
-include:partial$subscription-item-start-date.adoc[]
+include::partial$subscription-item-start-date.adoc[]
 
 === Warenausgangsdatum
 
