Added recommended mappings for Check24 and Check24 Offer

--- a/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
@@ -47,6 +47,8 @@ _oder_
 
 * Eigenschaft des Typs *Text*, Sprache *Deutsch*
 
+*_Hinweis:_* Beschreibungstexte in HTML verwenden, wenn möglich.
+
 | Kategoriepfad
 | ja
 | * *Standardkategorie » Pfad*
@@ -151,7 +153,7 @@ _oder_
 
 | Durchmesser
 | nein
-| Durchmesser des Artikels in mm oder cm. +
+| Durchmesser des Artikels in mm oder cm.
 
 | Sitzhöhe
 | nein
