--- a/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
@@ -3,26 +3,27 @@
 |===
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| ID
+| Artikelnummer
 | ja
 | * *SKU » SKU* +
 *_Tipp:_* Wähle die Auftragsherkunft *Check24.de*. Gib in das Feld *Konto* die Zahl `0` ein. +
 *_Tipp:_* Wähle als Ausweich-Datenfeld *Variante » Varianten-ID*.
 
-| Hersteller
-| nein
-| * *Artikel » Herstellername*
+| Link
+| ja
+| * *Variante »* [Ceres Produkt-URL für den Standard-Mandanten] +
 
-| MPNR +
-(Master Part Number Registry)
-| nein
-| * *Variante » Modell*
+*_Hinweis:_* Dieses Datenfeld kannst du nur nutzen, wenn du einen Ceres-Shop hast.
+
+_oder_
+
+* *Artikeltext »* [URL-Pfad für andere Mandanten]
 
 | EAN
 | ja
 | * *Barcode » [Barcode des Typs GTIN wählen]*
 
-| Name
+| Artikelname
 | ja
 | * *Artikeltext » Name 1*, Sprache *Deutsch*
 
@@ -38,8 +39,8 @@ _oder_
 
 * Eigenschaft des Typs *Text*, Sprache *Deutsch*
 
-| Beschreibung
-| nein
+| Artikelbeschreibung
+| ja
 | * *Artikeltext » Artikeltext*, Sprache *Deutsch*
 
 _oder_
@@ -52,39 +53,15 @@ _oder_
 | ja
 | * *Standardkategorie » Pfad*
 
-| Preis
+| Verkaufspreis
 | ja
 | * *Verkaufspreis » [Verkaufspreis für {market} wählen]*
 
-| Grundpreis: Verkaufspreis
-| nein
-| * *Grundpreis » Preis » [Denselben Verkaufspreis wie für Datenfeld "Preis" wählen]*
-
-| Grundpreis: Einheit
-| nein
-| * *Grundpreis » Einheit Name » [Denselben Verkaufspreis wie für Datenfeld "Preis" wählen]*, Sprache *Deutsch*
-
-| Grundpreis: Menge
-| nein
-| * *Grundpreis » Anzahl » [Denselben Verkaufspreis wie für Datenfeld "Preis" wählen]*
-
-| Link
-| ja
-| * *Variante » Ceres Produkt-URL* für den Standard-Mandanten +
-*_Hinweis:_* Dieses Datenfeld kannst du nur nutzen, wenn du einen Ceres-Shop hast.
-
-_oder_
-
-* *Artikeltext » URL-Pfad* für andere Mandanten
-
-| Bild-URL
-| nein
-| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
-*_Erlaubte Dateitypen:_* jpg, gif, bmp, png
-
 | Lieferzeit
-| nein
-| * *Variante » Verfügbarkeit*
+| ja
+| Die Lieferzeit des Artikels in Werktagen. +
+
+* *Variante » Verfügbarkeit*
 
 _oder_
 
@@ -94,21 +71,93 @@ _oder_
 
 * Eigenschaft an Variante
 
-| Versandkosten
-| nein
-| * *Variante » Standard-Versandkosten*
+| Bild-URL 1
+| ja
+| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
+*_Erlaubte Dateitypen:_* jpg, gif, bmp, png
 
-| PZN +
-(Pharmazentralnummer)
+| Bild-URL 2-10
 | nein
-| * Eigenschaft an Variante
+| zusätzliche Bilder +
 
-| Bestand
+* *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
+*_Erlaubte Dateitypen:_* jpg, gif, bmp, png
+
+| Marke
 | nein
-| * *Bestand » [1 oder mehrere Lager wählen]* +
-*_Tipp:_* Mit den Datenfeldern unter *Virtuelles Gesamtlager* wird die Summe der Bestände aller Vertriebslager exportiert.
+| * *Artikel » Herstellername*
 
-| Gewicht
+| Herstellernummer
+| nein
+| * *Variante » Modell*
+
+| Farbe
+| nein
+| * Eigenschaft des Typs *Text* oder *Auswahl*
+
+| Material
+| nein
+| * Eigenschaft des Typs *Text* oder *Auswahl*
+
+| Abmessungen
+| nein
+| 
+
+| Tiefe
+| nein
+| Tiefe des Artikels in mm oder cm.
+
+| Höhe
+| nein
+| Höhe des Artikels in mm oder cm. +
+
+* *Variante » Höhe*, Größeneinheit *Millimeter* oder *Zentimeter*
+
+| Breite
+| nein
+| Breite des Artikels in mm oder cm. +
+
+* *Variante » Breite*, Größeneinheit *Millimeter* oder *Zentimeter*
+
+| Durchmesser
+| nein
+| Durchmesser des Artikels in mm oder cm.
+
+| Gewicht (g/kg)
 | nein
 | * *Variante » Gewicht netto g*
+
+| Maximale Belastbarkeit (g/kg)
+| nein
+| Maximale Belastbarkeit in g oder kg. +
+
+* Eigenschaft des Typs *Ganze Zahl* oder *Kommazahl*
+
+| Pflegehinweis
+| nein
+| * Eigenschaft des Typs *Text*
+
+| Lieferumfang
+| nein
+| * Eigenschaft des Typs *Text*
+
+| Lieferzustand
+| nein
+| * Eigenschaft des Typs *Text* oder *Auswahl*
+
+| Stil
+| nein
+| Stil des Artikels, zum Beispiel "Landhaus" oder "Skandinavisch". +
+
+* Eigenschaft des Typs *Text* oder *Auswahl*
+
+| Modell
+| nein
+| * *Variante » Modell*
+
+| Serie
+| nein
+| Zugehörige Serie des Artikels, zum Beispiel bei Jugendzimmern. +
+
+* Eigenschaft des Typs *Text* oder *Auswahl*
 |===
