--- a/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
@@ -3,21 +3,40 @@
 |===
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| ID
+| Artikelnummer
 | ja
 | * *SKU » SKU* +
 *_Tipp:_* Wähle die Auftragsherkunft *Check24.de*. Gib in das Feld *Konto* die Zahl `0` ein. +
 *_Tipp:_* Wähle als Ausweich-Datenfeld *Variante » Varianten-ID*.
 
+| Artikelname
+| ja
+| * *Artikeltext » Name 1*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 2*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 3*, Sprache *Deutsch*
+
+_oder_
+
+* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+
+| EAN
+| ja
+| * *Barcode »* [Barcode des Typs *GTIN* wählen]
+
 | Bestand
-| nein
+| ja
 | * *Bestand » [1 oder mehrere Lager wählen]* +
 *_Tipp:_* Mit den Datenfeldern unter *Virtuelles Gesamtlager* wird die Summe der Bestände aller Vertriebslager exportiert.
 
-| Link
+| Verkaufspreis
 | ja
-| *URL-Pfad* des Artikels abhängig vom
-gewählten Mandanten
+| * *Verkaufspreis »* [Verkaufspreis für Check24 wählen]
 
 | Lieferzeit
 | ja
@@ -35,27 +54,7 @@ _oder_
 | nein
 | * *Variante » Standard-Versandkosten*
 
-| Name
-| ja
-| * *Artikeltext » Name 1*, Sprache *Deutsch*
-
-_oder_
-
-* *Artikeltext » Name 2*, Sprache *Deutsch*
-
-_oder_
-
-* *Artikeltext » Name 3*, Sprache *Deutsch*
-
-_oder_
-
-* Eigenschaft des Typs *Text*, Sprache *Deutsch*
-
-| Varianten-ID
-| nein
-| * *Variante » Varianten-ID*
-
-| Zustellmodus
+| Liefermodus
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
@@ -64,7 +63,48 @@ _oder_
 * `spedition`
 * `paket`
 * `warensendung`
-| 2-Mann-Handling
+
+| Varianten-ID
+| ja
+| Dieses Datenfeld wird automatisch zugeordnet.
+
+| Verfügbarkeit
+| nein
+| * *Variante » Verfügbarkeits-ID*
+
+| UVP
+| nein
+| * *Verkaufspreis »* [Verkaufspreis vom Typ *UVP* wählen]
+
+| Kategoriepfad
+| nein
+| * *Standardkategorie » Pfad*
+
+| Link
+| nein
+| *URL-Pfad* des Artikels abhängig vom gewählten Mandanten
+
+| Artikelbeschreibung
+| nein
+| * *Artikeltext » Artikeltext*, Sprache *Deutsch*
+
+_oder_
+
+* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+
+| Mindestpreis
+| nein
+| 
+
+| Marke
+| nein
+| * *Artikel » Herstellername*
+
+| Bild-URL 1
+| nein
+| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL*
+
+| 2-Mann-Service
 | nein
 | Bei Speditionslieferung: Lieferung bis Aufstellort?
 
@@ -75,7 +115,8 @@ _oder_
 * `ja` = kostenloser Service
 * `nein` = kein Service
 * Zusatzkosten als Dezimalzahl, zum Beispiel `39,99` = Preis für kostenpflichtigen Service
-| Aufbau-/Installationsservice
+
+| Installationsservice
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
@@ -83,7 +124,8 @@ _oder_
 
 * `ja`
 * `nein`
-| Mitnahme Altgerät
+
+| Altgerätmitnahme
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
@@ -91,7 +133,8 @@ _oder_
 
 * `ja`
 * `nein`
-| Mitnahme Verpackung
+
+| Verpackungsmitnahme
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
@@ -99,11 +142,12 @@ _oder_
 
 * `ja`
 * `nein`
+
 | IDs der verfügbaren Services
 | nein
 | Ordne hier kein plentymarkets Datenfeld zu.
 
-| Logistikdienstleister
+| Versanddienstleister
 | nein
 | * Eigenschaft des Typs *Text* +
   *_Beispiel:_* `DHL`
@@ -112,12 +156,12 @@ _oder_
 | nein
 | * *Variante » Zolltarifnummer*
 
-| Versandkosten für Geschmacksretouren
+| Rückversandkosten
 | nein
 | * Eigenschaft des Typs *Kommazahl*, um den Preis einzugeben +
   *_Beispiel:_* `39,99`
 
-| Altgeräteentsorgung ab Bordsteinkante
+| Abholung Altgerät an Bordsteinkante
 | nein
 | * Eigenschaft des Typs *Zeichenkette*, um den Preis einzugeben +
   *_Beispiel:_* `39,99`
