--- a/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
@@ -52,7 +52,7 @@ include::partial$item-category-creation-date.adoc[]
 :key-figure: The average number of order items
 :this-means: This way, you can see at a glance how many order items are sold on average broken down by plugins that create orders in your plentymarkets system. A further differentiation is made according to the creation date of the orders.
 
-include:partial$order-referrer-plugin-creation-date.adoc[]
+include::partial$order-referrer-plugin-creation-date.adoc[]
 
 === Order referrer, creation date
 
@@ -80,14 +80,14 @@ include::partial$order-referrer-payment-date.adoc[]
 :key-figure: The average number of order items
 :this-means: This means that the end date of the subscription is considered in the calculation.
 
-include:partial$subscription-end-date.adoc[]
+include::partial$subscription-end-date.adoc[]
 
 === Subscription item end date
 
 :key-figure: The average number of order items
 :this-means: This means that the end date of the items included in the subscription is considered in the calculation.
 
-include:partial$subscription-item-end-date.adoc[]
+include::partial$subscription-item-end-date.adoc[]
 
 === Creation date
 
@@ -108,7 +108,7 @@ include::partial$manufacturer-creation-date.adoc[]
 :key-figure: The average number of order items
 :this-means: This way, you can see at a glance how many order items are sold broken down by contact. A further differentiation is made according to the creation date of the orders.
 
-include:partial$contact-creation-date.adoc[]
+include::partial$contact-creation-date.adoc[]
 
 === Warehouse, creation date
 
@@ -178,14 +178,14 @@ include::partial$return-reason-creation-date.adoc[]
 :key-figure: The average number of order items
 :this-means: This means that the start date of the subscription is considered in the calculation.
 
-include:partial$subscription-start-date.adoc[]
+include::partial$subscription-start-date.adoc[]
 
 === Subscription item start date
 
 :key-figure: The average number of order items
 :this-means: This means that the start date of the items included in the subscription is considered in the calculation.
 
-include:partial$subscription-item-start-date.adoc[]
+include::partial$subscription-item-start-date.adoc[]
 
 === Date of outgoing items
 
