Added step for authorization

--- a/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
@@ -46,7 +46,11 @@ Konto erstellen:
 *_Wichtig:_* Alle plentymarkets E-Mail-Adressen, über die du Nachrichten an Amazon schickst, müssen zuvor bei Amazon im Seller Central-Bereich autorisiert werden.
 . Klicke auf *Neues Konto erstellen*. +
 → Das Konto wird erstellt.
-. Klicke links auf das zuvor erstellt Konto in der Kontenübersicht.
+. Klicke links auf das zuvor erstellte Konto in der Kontenübersicht. +
+→ Das Tab *Einstellungen* für dieses Konto wird geöffnet.
+. Klicke zuerst auf die Schaltfläche *Zugriff erlauben*. +
+→ Hier erlaubst du plentymarkets Zugriff auf dein Amazon-Konto, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Du wirst zu Amazon weitergeleitet und musst die Zugangsdaten deines Amazon-Verkäuferkontos eingeben. Nachdem du dich bei Amazon eingeloggt hast, wird dir angezeigt, auf welche Daten aus Amazon plentymarkets zugreifen darf. Klicke dort auf *Confirm*, um die Autorisierung abzuschließen. +
+→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet. Klicke auf *Abschließen*, um mit der Einrichtung deines Kontos fortzufahren.
 . Nimm die Einstellungen im Tab *Einstellungen* vor. Beachte dabei die Erläuterungen in <<#amazon-tab-einstellungen>>. +
 *_Hinweis:_* Alle Angaben im Bereich *Zugangsdaten* sind Pflichtangaben.
 . Speichere (terra:save[]) die Einstellungen.
