--- a/docs/en-gb/modules/markets/pages/galaxus.adoc
+++ b/docs/en-gb/modules/markets/pages/galaxus.adoc
@@ -419,16 +419,16 @@ PPP Galaxus Salesprice
 | *Item » Edit Item » [Open item] » Tab: Global » Ager rating*
 
 | *ProductTitle_DE, _Mandatory (at least one of four languages), (Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (de) or Name 2,3* Can be selected in the Elastic Export configuration for this format.*
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (de) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitle_EN, _(Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (en) or Name 2,3* Can be selected in the Elastic Export configuration for this format*
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (en) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitle_FR, _(Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (fr) or Name 2,3* Can be selected in the Elastic Export configuration for this format*
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (fr) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitle_IT, _(Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (it) or Name 2,3* Can be selected in the Elastic Export configuration for this format*
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (it) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitleTagLine_DE, _Text_*
 | *-*
@@ -443,16 +443,16 @@ PPP Galaxus Salesprice
 | *-*
 
 | *ProductDescription_DE, _mandatory (at least one of four languages), Text_*
-| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (de) or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*.
+| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (de)* or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*.
 
 | *ProductDescription_EN, _Text_*
-| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (en) or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (en)* or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *ProductDescription_FR, _Text_*
-| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (fr) or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (fr)* or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *ProductDescription_IT, _Text_*
-| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (it) or input field selection* under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+| *Standard: Item » Edit item » [Open item] » Tab: Texts » Item text (it)* or input field selection* under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *MinimumOrderQuantity, _mandatory, integer(10)_*
 | *Item » Edit item » [Open item] » [Open variation] » Tab: Settings » Availability: Min. order quantity*
