--- a/docs/en-gb/modules/business-decisions/pages/contacts.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/contacts.adoc
@@ -49,6 +49,8 @@ include::partial$country-dimension.adoc[]
 [#300]
 == Filters
 
+include::partial$filter-introduction.adoc[]
+
 // Rating of the contact
 
 :filtered-data: of the contacts
@@ -60,8 +62,8 @@ include::partial$rating-contact.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected ratings
+:filter: selected ratings
 :commas:
 
 [[table-key-figures-operators-rating-contact]]
@@ -81,12 +83,13 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 --
 
-// Duration since contact creation 
+// Duration since contact creation
 
 include::partial$duration-since-contact-creation.adoc[]
 
 [.collapseBox]
 .Comparison operators available for this filter
+
 --
 
 [[table-key-figures-operators-duration-since-contact-creation]]
@@ -118,8 +121,8 @@ include::partial$contact-owner.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected owners
+:filter: selected owners
 :commas:
 
 [[table-key-figures-operators-contact-owner]]
@@ -134,7 +137,6 @@ include::partial$is-not-equal.adoc[]
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
 include::partial$corresponds-to-none-of-these-values.adoc[]
-
 
 |====
 
@@ -186,8 +188,8 @@ include::partial$referrer.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected referrers
+:filter: selected referrers
 :commas:
 
 [[table-key-figures-operators-referrer-contact]]
@@ -256,14 +258,14 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 include::partial$language.adoc[]
 
-
 [.collapseBox]
 .Comparison operators available for this filter
 --
 
-:filter-ending: contact IDs entered
-:commas: Use commas to separate multiple contact IDs.
-
+:filter-ending: selected languages
+:commas:
+:filter: selected languages
+ 
 [[table-key-figures-operators-language]]
 [cols="1,1,3"]
 |====
@@ -280,5 +282,3 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-
-
