change content update screenshots

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1241,38 +1241,10 @@ Element kopieren:
 . Bewege den Mauszeiger auf das eingefügte Element und klicke auf *Bearbeiten* (icon:pencil[role="blue"]), um die Einstellungen des Elements zu ändern.
 . *Speichere* (terra:save[]) die Einstellungen.
 
-[#840]
-=== Globales Zeitintervall anpassen
-
-Du hast dein Dashboard mit den auf dieser Seite beschriebenen Darstellungsmöglichkeiten befüllt und möchtest dir Daten für verschiedene Zeitintervalle flexibel anzeigen lassen?
-Dafür bietet sich das Element *Globales Zeitintervall* an, das du in <<image-global-time-interval>> sehen kannst. Es bietet dir die Möglichkeit, die Daten in allen Diagrammen, Tabellen und Kacheln vorübergehend für ein identisches Zeitintervall anzuzeigen. Zur Verfügung stehen die Optionen *Monat*, *Tag*, *Woche*, *Quartal* und *Jahr*. Per Klick auf *Zurücksetzen* werden die Daten wieder für die Zeitintervalle angezeigt, die du in den Einstellungen des jeweiligen Diagramms, der Tabelle oder der Kachel festgelegt hast. 
-
-.Element *Globales Zeitintervall*
-[[image-global-time-interval]]
-image::business-entscheidungen:globales-zeitintervall.png[]
-
-Gehe wie unten beschrieben vor, um das Element *Globales Zeitintervall* auf dem Dashboard zu platzieren.
-
-[.instruction]
-Globales Zeitintervall des Dashboards ändern:
-
-. Öffne das Menü *plentymarkets Logo (Start) » Dashboard*.
-. Klicke auf *Ansicht bearbeiten* (terra:design_inline_edit[]).
-. Platziere das Element *Globales Zeitintervall* per Drag-and-drop auf dem Dashboard.
-. *Speichere* (terra:save[]) die Einstellungen.
-
-[TIP]
-.Empfohlene Platzierung des Elements
-====
-Das Element *Globales Zeitintervall* kann pro Dashboard-Ansicht nur ein Mal eingebunden werden. Wir empfehlen dir daher, das Element an einer für dich gut sichtbaren Stelle zu platzieren.
-====
-
 [#850]
 === Globale Filter nutzen
 
-Im <<#840, vorherigen Kapitel>> wurde beschrieben, wie du auf dem Dashboard angezeigte Daten für verschiedene Zeitintervalle eingrenzen kannst. 
-
-Das Element *Globale Filter* bietet dir zahlreiche weitere Möglichkeiten, Daten auf dem Dashboard übersichtlich zu filtern. Nachdem du alle Einstellungen vorgenommen hast, sind die globalen Filter permanent für dich zugänglich. Diese Einstellungsmöglichkeit hilft dir dabei, die Übersicht zu behalten. Damit ersparst du dir in vielen Anwendungsfällen, eine zusätzliche Dashboard-Ansicht anzulegen.
+Das Element *Globale Filter* bietet dir zahlreiche Möglichkeiten, Daten auf dem Dashboard übersichtlich zu filtern. Nachdem du alle Einstellungen vorgenommen hast, sind die globalen Filter permanent für dich zugänglich. Diese Einstellungsmöglichkeit hilft dir dabei, die Übersicht zu behalten. Damit ersparst du dir in vielen Anwendungsfällen, eine zusätzliche Dashboard-Ansicht anzulegen.
 
 Im Folgenden lernst du, wie du das Element <<#851, auf dem Dashboard platzierst>> und einmalig im Voraus bestimmst, <<#852, welche Filter zur Verfügung stehen sollen>>. Außerdem kannst du für dein Dashboard <<#855, voreingestellte Filter>> bestimmen, sodass bei jedem Öffnen der Ansicht bereits automatisch Filter angewendet sind.
 
@@ -1373,6 +1345,15 @@ Standardfilter verwenden:
 ====
 Möchtest du einen zuvor gesetzten Standardfilter entfernen? Öffne dazu den Bearbeitungsmodus des Dashboards und klicke rechts am Filter auf material:clear[role="darkGrey"]. Klicke anschließend auf icon:search[role="darkGrey"], um den Filter zu aktualisieren. *Speichere* am Ende deine Einstellungen. Auf diese Weise wird der Standardfilter entfernt. Gehe wie <<#855, oben beschrieben>> vor, um neue Filter hinzuzufügen.
 ====
+
+[#840]
+==== Globales Zeitintervall anpassen
+
+Globale Filter bieten dir die Möglichkeit, die Daten in allen Diagrammen, Tabellen und Kacheln vorübergehend für ein bestimmtes Zeitintervall anzuzeigen. Zur Verfügung stehen die Optionen *Monat*, *Tag*, *Woche*, *Quartal* und *Jahr*. Möchtest du zum Beispiel alle Daten so filtern, dass du den Stand der aktuellen Woche siehst? Dann klicke einfach auf *Woche*. Per Klick auf *Zurücksetzen* werden die Daten wieder für die Zeitintervalle angezeigt, die du in den Einstellungen des jeweiligen Diagramms, der Tabelle oder der Kachel festgelegt hast. <<image-global-filter-time-interval>> zeigt, wie die Optionen zur Anpassung des Zeitintervalls aussehen.
+
+.Optionen zur Anpassung des Zeitintervalls
+[[image-global-filter-time-interval]]
+image::business-entscheidungen:globale-filter-zeitintervall.png[width=640, height=360]
 
 [#900]
 === Benachrichtigungen anzeigen
