add practical example link to emailbuilder page

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1588,7 +1588,8 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 | `order.formattedShipping.providerId`
 
 | `Tracking-URL`
-|Dient zur Sendungsverfolgung. Die xref:fulfillment:versand-vorbereiten.adoc#840[Tracking-URL] des Versanddienstleisters wird im Menü *Einrichtung » Aufträge » Versand » Optionen* im Tab *Versanddienstleister* gespeichert.
+|Dient zur Sendungsverfolgung. Die xref:fulfillment:versand-vorbereiten.adoc#840[Tracking-URL] des Versanddienstleisters wird im Menü *Einrichtung » Aufträge » Versand » Optionen* im Tab *Versanddienstleister* gespeichert. +
+*_Hinweis:_* Schau auch in unser xref:crm:praxisbeispiel-tracking-url-senden.adoc#[Praxisbeispiel zu diesem Thema]. Dort wird beschrieben, welche Einstellungen du vornehmen musst, um die Tracking-URL an deine Kund:innen zu senden.
 | `order.formattedShipping.trackingURL`
 
 |====
