fix wrong collapsebox formatting

--- a/docs/en-gb/modules/markets/pages/galaxus.adoc
+++ b/docs/en-gb/modules/markets/pages/galaxus.adoc
@@ -418,16 +418,20 @@ PPP Galaxus Salesprice
 | *Item » Edit Item » [Open item] » Tab: Global » Ager rating*
 
 | *ProductTitle_DE, _Mandatory (at least one of four languages), (Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (de) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (de) or Name 2,3* +
+Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitle_EN, _(Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (en) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (en) or Name 2,3* +
+Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitle_FR, _(Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (fr) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (fr) or Name 2,3* +
+Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitle_IT, _(Text100)_*
-| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (it) or Name 2,3* Can be selected in the Elastic Export configuration for this format.
+| *Item » Edit Item » [Open item] » Tab: Texte » Name 1 (it) or Name 2,3* +
+Can be selected in the Elastic Export configuration for this format.
 
 | *ProductTitleTagLine_DE, _Text_*
 | *-*
@@ -683,10 +687,6 @@ For Galaxus, the event procedures listed in <<#galaxus-event-procedures>> are av
 |===
 |Event procedure name |Recommended event |Explanation
 
-| *Event procedure name*
-| *Recommended event*
-| *Explanation*
-
 | Send order confirmation to Galaxus
 | Any
 | * Informs Galaxus about changes made to the plentymarkets order.
@@ -772,9 +772,7 @@ For example, set up an event procedure to send automatic order confirmations to 
 
 . Go to *Setup » Client » [Select client] » Locations » [Select location] » Documents » Delivery note*.
 . In the area *Optional elements below stock unit table*, select *Yes* for the option *External Order Number*.
-. Insert the note agreed on with Galaxus in the field *Note*. +
-    +
-
+. Insert the note agreed on with Galaxus in the field *Note*.
 . *Save* the changes.
 
 ==== Splitting an order: an example
