another fix for contacts key figure

--- a/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
@@ -96,6 +96,12 @@ include::partial$duration-since-contact-creation.adoc[]
 
 --
 
+:filter-endung: gewählten Werten
+:unbestimmter-artikel: einem
+:keinem-keiner: keinem
+:filter: gewählten Werte
+:kommas:
+
 [[table-key-figures-operators-duration-since-contact-creation]]
 [cols="1,1,3"]
 |====
