--- a/docs/en-gb/modules/business-decisions/pages/contacts.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/contacts.adoc
@@ -62,8 +62,8 @@ include::partial$rating-contact.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected ratings
-:filter: selected ratings
+:filter-ending: ratings selected
+:filter: ratings selected
 :commas:
 
 [[table-key-figures-operators-rating-contact]]
@@ -91,6 +91,10 @@ include::partial$duration-since-contact-creation.adoc[]
 .Comparison operators available for this filter
 
 --
+
+:filter-endung: values selected
+:filter: values selected
+:kommas:
 
 [[table-key-figures-operators-duration-since-contact-creation]]
 [cols="1,1,3"]
@@ -121,8 +125,8 @@ include::partial$contact-owner.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected owners
-:filter: selected owners
+:filter-ending: owners selected 
+:filter: owners selected
 :commas:
 
 [[table-key-figures-operators-contact-owner]]
@@ -152,8 +156,8 @@ include::partial$created-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: dates (icon:calendar[]) selected
+:filter: dates (icon:calendar[]) selected
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -188,8 +192,8 @@ include::partial$referrer.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected referrers
-:filter: selected referrers
+:filter-ending: referrers selected
+:filter: referrers selected
 :commas:
 
 [[table-key-figures-operators-referrer-contact]]
@@ -229,10 +233,8 @@ include::partial$country-filter.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected countries
- 
-:filter: selected countries
- 
+:filter-ending: countries selected
+:filter: countries selected
 :commas:
 
 [[table-key-figures-operators-referrer]]
@@ -262,9 +264,9 @@ include::partial$language.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected languages
+:filter-ending: languages selected
 :commas:
-:filter: selected languages
+:filter: languages selected
  
 [[table-key-figures-operators-language]]
 [cols="1,1,3"]
