--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -101,10 +101,10 @@ Creating key figures from the dashboard:
 . Click on *Edit view* (terra:design_inline_edit[]). +
 → The settings menu opens.
 . Drag-and-drop an element from the settings menu on the dashboard.
-. Move the cursor over the element and click on )terra:design_inline_edit[]). +
+. Move the cursor over the element and click on (terra:design_inline_edit[]). +
 → The settings menu for the element opens.
 . Drag-and-drop an element within the area outlined in blue.
-. Move the cursor over the element and click on )terra:design_inline_edit[]).
+. Move the cursor over the element and click on (terra:design_inline_edit[]).
 . In the settings menu, click on *Key figure* and select the option *New key figure*. +
 → A window for setting up the new key figure opens.
 . Enter a *name* for the key figure.
@@ -204,7 +204,7 @@ Decide which users should see the default view.  You can also restrict or allow 
 
 Open the editing mode (terra:design_inline_edit[]) for an already existing <<#407, dashboard view>>. Click on *Rights management* to access the settings for users and user roles and decide which dashboard view(s) should be visible for them.
 
-Additional information and instructions on how to assign rights to users or roles are available on the xref;business-decisions:user-accounts-access.adoc#112[User accounts and access] page of the manual.
+Additional information and instructions on how to assign rights to users or roles are available on the xref:business-decisions:user-accounts-access.adoc#112[User accounts and access] page of the manual.
 
 [#409]
 === Determining visibility of dashboard views
@@ -924,7 +924,7 @@ Carrying out settings for progress charts:
 [#745]
 ==== Gauge chart
 
-Gauge charts are especially suited for displaying the degree to which a specific target has already been reached. The target as well as the current value of the key figure are both represented with different colours and separated by a line.
+Gauge charts are especially suited for displaying the degree to which a specific target has already been reached. The target as well as the current value of the key figure are both represented with different colours and separated by a line. 
 
 [IMPORTANT]
 .Save target values
@@ -1217,44 +1217,16 @@ Copying an element:
 . Open the editing mode for the dashboard view (terra:design_inline_edit[]).
 . Open the editing mode of the area (icon:pencil[role="blue"]).
 . Move the cursor over the element that you want to copy.
-. Click on *Copy* (material:content_copy[role=”blue”]).
-. On the upper right corner of the area, click on *Paste*(material:content_paste[role="blue"]). +
+. Click on *Copy* (material:content_copy[role="blue"]).
+. On the upper right corner of the area, click on *Paste* (material:content_paste[role="blue"]). +
 → The element is added.
 . Move the cursor over the new element and click on *Edit* (icon:pencil[role="blue"]) to adjust the settings for the element.
 . *Save* (terra:save[]) the settings.
 
-[#840]
-=== Adjusting the global time interval
-
-Have you set up your dashboard using the elements described on this page and want to flexibly display data for specific time intervals now?
-To do so, you can use the *Global time interval* element which you can see in <<image-global-time-interval>>. It enables you to temporarily display the data of all charts, tables and tiles for one identical time interval. The options *Month*, *Day*, *Week*, *Quarter* and *Year* are available. If you click on *Reset*, the data will once again be displayed according to the time interval that you have selected in the settings of the respective chart, table or tile.
-
-.*Global time interval* element
-[[image-global-time-interval]]
-image::business-decisions:global-time-interval.png[]
-
-Proceed as described below to add the *Global time interval* element to the dashboard.
-
-[.instruction]
-Changing the global time interval of the dashboard:
-
-. Go to *plentymarkets logo (Start) » Dashboard*.
-. Click on *Edit view* (terra:design_inline_edit[]).
-. Drag-and-drop the *Global time interval* element from the settings menu on the dashboard.
-. *Save* (terra:save[]) the settings.
-
-[TIP]
-.Recommended position for the element
-====
-The *Global time interval* element can only be added to each dashboard view once. Thus, we recommend that you place the element in a position that is easy to see.
-====
-
 [#850]
 === Using global filters
 
-In the <<#840, previous chapter>>, you learned how to adjust the time interval for data displayed on the dashboard.
-
-The *Global filters* element offers you numerous additional ways to filter the data on your dashboard. After you have carried out all settings, the global filters are displayed permanently. This helps you to keep an overview. In many cases, setting up global filters will save you the effort of having to create an entirely new dashboard view.
+The *Global filters* element offers you numerous ways to filter the data on your dashboard. After you have carried out all settings, the global filters are displayed permanently. This helps you to keep an overview. In many cases, setting up global filters will save you the effort of having to create an entirely new dashboard view.
 
 In the following chapters, you will learn <<#851, how to place the element on the dashboard>> and how to determine once in advance <<#852, which filters should be available>>. In addition, you can set up <<#855, pre-defined default filters>> that will be applied automatically every time the dashboard view is opened.
 
@@ -1348,13 +1320,22 @@ Using default filters:
 . Click on *Filter* (material:tune[role="darkGrey"]).
 . Select the filter and criteria that should be used to filter the data of the dashboard view every time the view is opened. To do so, proceed <<#853, as described above>>.
 . *Save* (terra:save[]) the settings. +
-→ The default filter is applied.
+→ The default filter is applied. 
 
 [TIP]
 .Removing default filters
 ====
-Do you want to remove a previously set up default filter? To do so, open the editing mode of the dashboard and click on material:clear[role="darkGrey"] at the right side of the filter. Then, click on icon:search[role="darkGrey"] to update the filter. Finally, *save* your settings. This way, the default filter will be removed. Proceed as <<#855, described above>> to add new filters.
+Do you want to remove a previously set up default filter? To do so, open the editing mode of the dashboard and click on material:clear[role="darkGrey"]. at the right side of the filter. Then, click on icon:search[role="darkGrey"] to update the filter. Finally, *save* your settings. This way, the default filter will be removed. Proceed as <<#855, described above>> to add new filters.
 ====
+
+[#840]
+==== Adjusting the global time interval
+
+Global filters enable you to temporarily display the data of all charts, tables and tiles for a specific time interval. The options *Month*, *Day*, *Week*, *Quarter* and *Year* are available. Would you like to filter all data so that you could see the values for the current week? Simply click on *Week*. If you click on *Reset*, the data will once again be displayed according to the time interval that you have selected in the settings of the respective chart, table or tile. <<image-global-filter-time-interval>> shows what the options for adjusting the time interval look like.
+
+.Options for adjusting the time interval
+[[image-global-filter-time-interval]]
+image::business-decisions:global-filters-time-interval.png[width=360, height=360]
 
 [#900]
 === Displaying notifications
