--- a/docs/en-gb/modules/business-decisions/pages/contacts.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/contacts.adoc
@@ -92,9 +92,9 @@ include::partial$duration-since-contact-creation.adoc[]
 
 --
 
-:filter-endung: values selected
+:filter-ending: values selected
 :filter: values selected
-:kommas:
+:commas:
 
 [[table-key-figures-operators-duration-since-contact-creation]]
 [cols="1,1,3"]
