ADD more work to the warehouse page

--- a/docs/de-de/modules/warenwirtschaft/pages/praxisbeispiel-lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/praxisbeispiel-lager-einrichten.adoc
@@ -3,9 +3,8 @@
 :id: Y67WMM2
 :author: team-stock
 
-//In diesem Praxisbeispiel zeigen wir dir alles rund um die Einrichtung eines Lagers, wozu das Festlegen von Dimensionen, das Anlegen von Lagerorten, das Optimieren des Laufwegs und das Erstellen von Lagerort-Etiketten gehört.
+In diesem Praxisbeispiel zeigen wir dir alles rund um die Einrichtung eines Lagers, wozu das Festlegen von Dimensionen, das Anlegen von Lagerorten, das Optimieren des Laufwegs und das Erstellen von Lagerort-Etiketten gehört.
 
-////
 [#10]
 == Grundlagen Lager
 
@@ -46,7 +45,6 @@ image::warenwirtschaft:vorschau-lagerortname.png[]
 Es wird mindestens eine Dimension benötigt. Ohne Dimensionen können keine Lagerorte angelegt werden.
 ====
 Wenn die Dimensionen soweit präpariert sind, müssen diese initial einmal gespeichert werden.
-////
 
 [#30]
 == Lagerorte anlegen
