--- a/docs/de-de/modules/plugins/partials/chapter-git-plugins-aktualisieren.adoc
+++ b/docs/de-de/modules/plugins/partials/chapter-git-plugins-aktualisieren.adoc
@@ -11,7 +11,7 @@ Wenn in deinem Git-Repository ein neuerer Stand deines Plugins vorliegt und du d
 [NOTE]
 .Entfernt in Plugin Build 2
 ====
-Ab dem 25. Juli 2022 wird ein neuer Bereitstellungsprozess (Plugin Build 2) schrittweise auf allen plentymakets Systemen veröffentlicht. Im neuen Bereitstellungsprozess werden Git-Plugins, die über einen Branch installiert sind, automatisch beim Bereitstellen auf den neusten Stand aktualisiert.
+Ab dem 25. Juli 2022 wird ein neuer Bereitstellungsprozess (Plugin Build 2) schrittweise auf allen plentymakets Systemen veröffentlicht. Wenn ein Git-Plugin über einen Branch installiert wurde, wird das Plugin beim Bereitstellen automatisch auf den neusten Stand aktualisiert.
 
 Sobald dein System auf Plugin Build 2 umgestellt ist, werden Aktionen zum Pullen von Branches aus der UI entfernt.
 ====
@@ -26,7 +26,7 @@ Du kannst zwischen den Branches eines Git-Repositorys wechseln. Bei der Auswahl 
 [WARNING]
 .Automatischer Pull in Plugin Build 2
 ====
-Ab dem 25. Juli 2022 wird ein neuer Bereitstellungsprozess (Plugin Build 2) schrittweise auf allen plentymakets Systemen veröffentlicht. Im neuen Bereitstellungsprozess werden Git-Plugins, die über einen Branch installiert sind, automatisch beim Bereitstellen auf den neusten Stand aktualisiert.
+Ab dem 25. Juli 2022 wird ein neuer Bereitstellungsprozess (Plugin Build 2) schrittweise auf allen plentymakets Systemen veröffentlicht. Wenn ein Git-Plugin über einen Branch installiert wurde, wird das Plugin beim Bereitstellen automatisch auf den neusten Stand aktualisiert.
 
 Sobald dein System auf Plugin Build 2 umgestellt ist, wirst du beim ersten Bereitstellen eines Plugin-Sets, das Git-Plugins enthält, über die Änderungen informiert. Wenn du verhindern möchtest, dass der Stand eines Git-Plugins automatisch aktualisiert wird, <<commit-wechseln, wechsle stattdessen zu einem Commit>>.
 ====
