Adjusted recommended mappings

--- a/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
@@ -133,11 +133,13 @@ _oder_
 
 | Abmessungen
 | nein
-| 
+| * Eigenschaft an Variante
 
 | Tiefe
 | nein
-| Tiefe des Artikels in mm oder cm.
+| Tiefe des Artikels in mm oder cm. +
+
+* Eigenschaft an Variante
 
 | Höhe
 | nein
@@ -153,23 +155,33 @@ _oder_
 
 | Durchmesser
 | nein
-| Durchmesser des Artikels in mm oder cm.
+| Durchmesser des Artikels in mm oder cm. +
+
+* Eigenschaft an Variante
 
 | Sitzhöhe
 | nein
 | Sitzhöhe des Artikels in mm oder cm. +
 
+* Eigenschaft an Variante
+
 | Sitzbreite
 | nein
 | Sitzbreite des Artikels in mm oder cm. +
+
+* Eigenschaft an Variante
 
 | Sitztiefe
 | nein
 | Sitztiefe des Artikels in mm oder cm. +
 
+* Eigenschaft an Variante
+
 | Liegefläche
 | nein
 | Liegefläche bei Betten oder Sofas mit Schlaffunktion. +
+
+* Eigenschaft an Variante
 
 | Gewicht (g/kg)
 | nein
