--- a/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
@@ -60,9 +60,10 @@ _oder_
 
 *_Mögliche Werte:_*
 
-* `spedition`
-* `paket`
-* `warensendung`
+* `Spedition`
+* `Paket`
+* `Warensendung`
+* `Briefsendung`
 
 | Varianten-ID
 | ja
@@ -70,7 +71,11 @@ _oder_
 
 | Verfügbarkeit
 | nein
-| * *Variante » Verfügbarkeits-ID*
+| Verfügbarkeitsstatus des Artikels. +
+
+* Eigenschaft des Typs *Text* oder *Auswahl* +
+
+erlaubte Werte: `auf Lager`, `nicht auf Lager`
 
 | UVP
 | nein
@@ -94,7 +99,9 @@ _oder_
 
 | Mindestpreis
 | nein
-| 
+| Mit dem Mindestpreis bestimmst du die Preisuntergrenze, bis zu welcher du bereit bist, deinen Preis anzupassen. +
+
+* *Verkaufspreis »* [Verkaufspreis für Check24 wählen]
 
 | Marke
 | nein
@@ -150,7 +157,7 @@ _oder_
 | Versanddienstleister
 | nein
 | * Eigenschaft des Typs *Text* +
-  *_Beispiel:_* `DHL`
+  *_Beispiele:_* `DHL`, `DPD`
 
 | Zolltarifnummer
 | nein
@@ -159,7 +166,7 @@ _oder_
 | Rückversandkosten
 | nein
 | * Eigenschaft des Typs *Kommazahl*, um den Preis einzugeben +
-  *_Beispiel:_* `39,99`
+  *_Beispiel:_* `3,99`
 
 | Abholung Altgerät an Bordsteinkante
 | nein
