ADD gifs to the warehouse page

--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -5,7 +5,7 @@
 :author: team-stock
 
 ////
-zuletzt bearbeitet 22.07.2022
+zuletzt bearbeitet 25.07.2022
 ////
 
 Diese Seite beschreibt, wie du dein Lager 1:1 in plentymarkets abbildest.
@@ -341,7 +341,7 @@ Das heißt, du zählst die verschiedenen Ebenen auf, wie zum Beispiel Halle, Zon
 
 Es kann hilfreich sein, die verschiedenen Dimensionen vorab auf einem Blatt Papier zu skizzieren.
 
-#GIF#
+image::warenwirtschaft:lager-dimension-planen.gif[]
 
 [TIP]
 .Wie viele Dimensionen soll ich wählen?
@@ -382,7 +382,7 @@ Du kannst die Dimensionen übernehmen, abändern oder löschen.
 
 //In der Vorschau siehst du, wie deinem Mitarbeiter der eigentliche Platz des Artikels angezeigt, also wie der Lagerortname dann aussehen wird. Also zum Beispiel "Artikel liegt auf Regal 1, Boden 1" + der Lagerort, den wir später erstellen werden.
 
-#GIF#
+image::warenwirtschaft:lager-dimensionen.gif[]
 
 [cols="1,3a"]
 |===
